@@ -1,5 +1,5 @@
 [Unit]
-Description=dnsmasq - A lightweight DHCP and caching DNS server
+Description=dnsmasq (%i) - A lightweight DHCP and caching DNS server
 Requires=network.target
 Wants=nss-lookup.target
 Before=nss-lookup.target
@@ -7,22 +7,22 @@ After=network.target
 
 [Service]
 Type=forking
-PIDFile=/run/dnsmasq/dnsmasq.pid
+PIDFile=/run/dnsmasq/dnsmasq.%i.pid
 
 # Test the config file and refuse starting if it is not valid.
-ExecStartPre=/etc/init.d/dnsmasq checkconfig
+ExecStartPre=/etc/init.d/dnsmasq checkconfig "%i"
 
 # We run dnsmasq via the /etc/init.d/dnsmasq script which acts as a
 # wrapper picking up extra configuration files and then execs dnsmasq
 # itself, when called with the "systemd-exec" function.
-ExecStart=/etc/init.d/dnsmasq systemd-exec
+ExecStart=/etc/init.d/dnsmasq systemd-exec "%i"
 
 # The systemd-*-resolvconf functions configure (and deconfigure)
 # resolvconf to work with the dnsmasq DNS server. They're called like
 # this to get correct error handling (ie don't start-resolvconf if the
 # dnsmasq daemon fails to start).
-ExecStartPost=/etc/init.d/dnsmasq systemd-start-resolvconf
-ExecStop=/etc/init.d/dnsmasq systemd-stop-resolvconf
+ExecStartPost=/etc/init.d/dnsmasq systemd-start-resolvconf "%i"
+ExecStop=/etc/init.d/dnsmasq systemd-stop-resolvconf "%i"
 
 
 ExecReload=/bin/kill -HUP $MAINPID
